--- a/app/src/main/res/layout/fragment_food_data.xml
+++ b/app/src/main/res/layout/fragment_food_data.xml
@@ -1,163 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:stretchColumns="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nutreons"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TableRow>
+    <data>
+        <variable
+            name="viewModel"
+            type="hochschule.de.bachelorthesis.view_model.activities.FoodInfoViewModel" />
+    </data>
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="16dp"
+        android:stretchColumns="1">
 
         <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="Energy(kcal)"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-        <TextView
-            android:gravity="right"
-            android:padding="3dip"
-            android:text="55"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-    </TableRow>
-
-    <TableRow>
-
-        <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="Energy (kJ)"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-        <TextView
-            android:gravity="right"
-            android:padding="3dip"
-            android:text="230"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-    <TableRow>
-
-        <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="Fat"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-        <TextView
-            android:gravity="right"
-            android:padding="3dip"
-            android:text="0.3g"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-    </TableRow>
-
-    <TableRow>
-
-        <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="of which saturates"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-        <TextView
-            android:gravity="right"
-            android:padding="3dip"
-            android:text="0mg"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-    <TableRow>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nutreons"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
         <View
             android:layout_height="2dip"
             android:background="#FF909090" />
 
-        <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="Protein"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        <TableRow>
 
-        <TextView
-            android:gravity="right"
-            android:padding="3dip"
-            android:text="0.5g"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-    </TableRow>
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Energy(kcal)"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="55"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Energy (kJ)"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="230"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
+
+        <View
+            android:layout_height="2dip"
+            android:background="#FF909090" />
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Fat"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="0.3g"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="of which saturates"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="0mg"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
+
+        <View
+            android:layout_height="2dip"
+            android:background="#FF909090" />
+
+        <TableRow>
+
+            <View
+                android:layout_height="2dip"
+                android:background="#FF909090" />
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Protein"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="0.5g"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
+
+        <View
+            android:layout_height="2dip"
+            android:background="#FF909090" />
 
 
-    <TableRow>
+        <TableRow>
 
-        <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="Carbohydrates"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Carbohydrates"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
-        <TextView
-            android:gravity="right"
-            android:padding="3dip"
-            android:text="13.8g"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-    </TableRow>
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="13.8g"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
 
-    <TableRow>
+        <TableRow>
 
-        <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="of which sugars"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="of which sugars"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
-        <TextView
-            android:gravity="right"
-            android:padding="3dip"
-            android:text="12.5g"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-    </TableRow>
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="12.5g"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
 
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
+        <View
+            android:layout_height="2dip"
+            android:background="#FF909090" />
 
-    <TableRow>
+        <TableRow>
 
-        <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="Salt"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Salt"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
-        <TextView
-            android:gravity="right"
-            android:padding="3dip"
-            android:text="0g"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-    </TableRow>
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="0g"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
 
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
+        <View
+            android:layout_height="2dip"
+            android:background="#FF909090" />
 
-</TableLayout>
+    </TableLayout>
+</layout>
